terraform/azure/components/account/firewall_rules.tf
resource "azurerm_firewall_application_rule_collection" "general" {
  name = "${local.resource_prefix}-firewall_rules_general"
  azure_firewall_name = azurerm_firewall.account_firewall.name
  resource_group_name = azurerm_resource_group.account_resource_group.name
  priority = "101"
  action = "Allow"

  rule {
    name = "allow network"
    source_addresses = ["*"]

    target_fqdns = [
      "*.cdn.mscr.io",
      "mcr.microsoft.com",
      "*.data.mcr.microsoft.com",
      "management.azure.com",
      "login.microsoftonline.com",
      "acs-mirror.azureedge.net",
      "dc.services.visualstudio.com",
      "*.opinsights.azure.com",
      "*.oms.opinsights.azure.com",
      "*.microsoftonline.com",
      "*.monitoring.azure.com",
      "*.azmk8s.io",
      "*.blob.core.windows.net",
      "*.internal.cloudapp.net",
      "*.cosmos.azure.com",     
     ]

    protocol {
      port = "80"
      type = "Http"
    }

    protocol {
      port = "443"
      type = "Https"
    }
  }
}

# resource "azurerm_firewall_application_rule_collection" "servicebus" {
#   name                = "${local.resource_prefix}-firewall_rules_servicebus"
#   azure_firewall_name = azurerm_firewall.account_firewall.name
#   resource_group_name = azurerm_resource_group.account_resource_group.name
#   priority            = "101"
#   action              = "Allow"

#   rule {
#     name = "allow network"
#     source_addresses = ["*"]
#     target_fqdns = [
#       "*.servicebus.windows.net" 
#     ]

#     protocol {
#       port = "5671"
#       type = "Tcp"
#     }
#   }
# }

resource "azurerm_firewall_network_rule_collection" "ntp" {
  name                = "${local.resource_prefix}-firewall_rules_ntp"
  azure_firewall_name = azurerm_firewall.account_firewall.name
  resource_group_name = azurerm_resource_group.account_resource_group.name
  priority            = 101
  action              = "Allow"

  rule {
    description           = "aks node time sync rule"
    name                  = "allow network"
    source_addresses      = ["*"]
    destination_ports     = ["123"]
    destination_addresses = ["*"]
    protocols             = ["UDP"]
  }
}

resource "azurerm_firewall_network_rule_collection" "dns" {
  name                = "${local.resource_prefix}-firewall_rules_dns"
  azure_firewall_name = azurerm_firewall.account_firewall.name
  resource_group_name = azurerm_resource_group.account_resource_group.name
  priority            = 102
  action              = "Allow"

  rule {
    description           = "aks node dns rule"
    name                  = "allow network"
    source_addresses      = ["*"]
    destination_ports     = ["53"]
    destination_addresses = ["*"]
    protocols             = ["UDP", "TCP"]
  }
}

resource "azurerm_firewall_network_rule_collection" "servicetags" {
  name                = "${local.resource_prefix}-firewall_rules_servicetags"
  azure_firewall_name = azurerm_firewall.account_firewall.name
  resource_group_name = azurerm_resource_group.account_resource_group.name
  priority            = 110
  action              = "Allow"

  rule {
    description       = "allow service tags"
    name              = "allow service tags"
    source_addresses  = ["*"]
    destination_ports = ["*"]
    protocols         = ["Any"]

    destination_addresses = [
      "AzureContainerRegistry",
      "MicrosoftContainerRegistry",
      "AzureActiveDirectory"
    ]
  }
}

resource "azurerm_firewall_application_rule_collection" "osupdates" {
  name                = "${local.resource_prefix}-firewall_rules_osupdates"
  azure_firewall_name = azurerm_firewall.account_firewall.name
  resource_group_name = azurerm_resource_group.account_resource_group.name
  priority            = 102
  action              = "Allow"

  rule {
    name             = "allow network"
    source_addresses = ["*"]

    target_fqdns = [
      "download.opensuse.org",
      "security.ubuntu.com",
      "archive.ubuntu.com",
      "ntp.ubuntu.com",
      "packages.microsoft.com",
      "snapcraft.io",
      "azure.archive.ubuntu.com",
      "deb.debian.org",
      "security.debian.org",
      "apt.kubernetes.io",
      "packages.cloud.google.com",
    ]

    protocol {
      port = "80"
      type = "Http"
    }

    protocol {
      port = "443"
      type = "Https"
    }
  }
}

resource "azurerm_firewall_application_rule_collection" "publicimages" {
  name                = "${local.resource_prefix}-firewall_rules_publicimages"
  azure_firewall_name = azurerm_firewall.account_firewall.name
  resource_group_name = azurerm_resource_group.account_resource_group.name
  priority            = 103
  action              = "Allow"

  rule {
    name             = "allow network"
    source_addresses = ["*"]

    target_fqdns = [
      "auth.docker.io",
      "registry-1.docker.io",
      "production.cloudflare.docker.com"
    ]

    protocol {
      port = "80"
      type = "Http"
    }

    protocol {
      port = "443"
      type = "Https"
    }
  }
}
